--- a/src/app/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/inicio-sesion/inicio-sesion.component.html
@@ -1,4 +1,4 @@
-<div class="container font-size" style="background-image: url({{prefijoUrlImagenes+fondoInicioSesion[0].valor}}); width: 100%; height: 100%">
+<div class="container font-size" style="background-image: url({{prefijoUrlImagenes+fondoInicioSesion}}); width: 100%; height: 100%">
     <div class="row">
         <img src="{{prefijoUrlImagenes+logo}}" alt="...">
     </div>
